--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <ul>
         <li>Alemania</li>
         <li>Suiza</li>
-        <li>Tailandia</li>
+        <li>Madagascar</li>
+        <li>China</li>
     </ul>
     
 </body>
