Modificacion index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <li>Alemania</li>
         <li>Suiza</li>
         <li>Tailandia</li>
-        <li>España</li>
+        <li>Italia</li>
+        <li>America</li>
     </ul>
     
 </body>
